--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -1,13 +1,18 @@
-.buttonColor {
-    background: #F5F5F5;
-    border-radius: 50px;
-    height: 50px;
-    width: 200px;
-    font-weight: bold;
-}
+.containerr {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #333333; /* Cinza escuro */
+  }
 
-.container {
-    display: grid;
-    grid-template-columns: 500px 500px 500px;
-    align-items: center;
-    }
+  body {
+    background-color: #121212; /* Preto escuro */
+    color: #ffffff; /* Branco */
+    font-family: Arial, sans-serif;
+  }
+  
+  .bandeira{
+    height: auto;
+    width: auto;
+  }
+  
