--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .buttonColor {
-  background: #f5f5f5;
+  background: hsl(0, 0%, 98%); /* Cor botões */
   border-radius: 50px;
   height: 50px;
   width: 200px;
